--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,6 +16,45 @@ on:
     - 'README_EN.md'
 
 jobs:
+
+  linux-x64-cpu-gcc:
+      runs-on: label-1
+      steps:
+      - uses: actions/checkout@v2.3.4
+      - name: update
+        run: sudo apt-get update
+      - name: depends
+        run: sudo apt-get install libprotobuf-dev protobuf-compiler libopencv-dev
+      - name: configure
+        run: mkdir build && cd build && cmake -DTENGINE_BUILD_TESTS=ON ..
+      - name: build
+        run: cmake --build build -j 2
+      - name: optest
+        run: |
+          cd build
+          git clone https://github.com/BUG1989/onnx_op_test_data.git
+          mv onnx_op_test_data onnx_node
+          export TG_DEBUG_REF=1
+          ctest --output-on-failure
+      - name: test-data
+        run: |
+          cd build
+          wget -c http://8.136.149.78/download/ci_data/images.zip && unzip images.zip && rm images.zip
+          wget -c http://8.136.149.78/download/ci_data/data_x86.zip && unzip data_x86.zip && rm data_x86.zip && mv data_x86 data
+          wget -c http://8.136.149.78/download/ci_data/model_test.zip && unzip model_test.zip && rm model_test.zip && mv model_test model
+          git clone https://github.com/BUG1989/onnx_op_test_data.git
+          mv onnx_op_test_data onnx_node            
+      - name: test-models
+        run: |
+          chmod +x ./tests/test.sh
+          cd build
+          ../tests/test.sh
+      - name: test-op
+        run: |
+          cd build
+          export TG_DEBUG_REF=1
+          ctest --output-on-failure     
+        
   android-armv7-cpu:
     runs-on: ubuntu-latest
     steps:
