--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
 
-  linux-x64-cpu-gcc:
+  linux-x64-cpu-gcc-test-1:
       runs-on: label-1
       steps:
       - uses: actions/checkout@v2.3.4
