--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -16,6 +16,47 @@ on:
     - 'README_EN.md'
 
 jobs:
+  linux-x64-cpu-gcc-test2:
+      runs-on: label-1
+      steps:
+      - uses: actions/checkout@v2.3.4
+      - name: configure
+        run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=debug -DTENGINE_BUILD_EXAMPLES=OFF -DTENGINE_BUILD_TESTS=ON -DTENGINE_COVERAGE=ON ..
+      - name: build
+        run: cmake --build build -j 8
+      - name: test-data
+        run: |
+          cd build
+          actions=/home/dongdong/actions-runner
+          ln -s ${actions}/ci_test/models_test/ models
+          ln -s ${actions}/ci_test/images/      images
+          ln -s ${actions}/ci_test/data_x86/    data
+          ln -s ${actions}/ci_test/onnx_op_test_data/ onnx_node
+      - name: test-models
+        run: |
+          chmod +x ./tests/test.sh
+          cd build
+          ../tests/test.sh
+      - name: test-op
+        run: |
+          cd build
+          export TG_DEBUG_REF=1
+          ctest --output-on-failure
+      - name: lcov-collect
+        run: |
+          cd build
+          lcov -d ./source -c -o lcov.info
+          lcov -r lcov.info '/usr/*' -o lcov.info
+          lcov -r lcov.info '*fp16*' -o lcov.info
+          lcov -r lcov.info '*int8*' -o lcov.info
+          lcov -r lcov.info '*uint8*' -o lcov.info
+          lcov --list lcov.info
+      - name: codecov
+        uses: codecov/codecov-action@v2.0.3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: build/lcov.info
+        
   linux-x64-cpu-gcc:
     runs-on: ubuntu-latest
     steps:
