--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -16,7 +16,7 @@ on:
     - 'README_EN.md'
 
 jobs:
-  linux-x64-cpu-gcc-test2:
+  linux-x64-cpu-gcc-test-2:
       runs-on: label-1
       steps:
       - uses: actions/checkout@v2.3.4
