--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           cd build
           actions=/home/dongdong/actions-runner
-          ln -s ${actions}/ci_test/models_test/ models
+          ln -s ${actions}/ci_test/model_test/ models
           ln -s ${actions}/ci_test/images/      images
           ln -s ${actions}/ci_test/data_x86/    data
           ln -s ${actions}/ci_test/onnx_op_test_data/ onnx_node
